# calib-targets-rs

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  REVIEW.md  backlog.md  pyproject.toml  run.sh
calib-targets-core/: Cargo.toml
calib-targets-core/src/: homography.rs  image.rs  lib.rs  orientation_clustering.rs
crates/calib-targets/: Cargo.toml  README.md
crates/calib-targets-aruco/: Cargo.toml  README.md  build.rs
crates/calib-targets-aruco/examples/: rectify_mesh.rs
crates/calib-targets-aruco/src/: builtins.rs  dictionary.rs  lib.rs  matcher.rs  scan.rs  threshold.rs
crates/calib-targets-aruco/tests/: bit_decode.rs
crates/calib-targets-bench/: Cargo.toml  datasets.toml
crates/calib-targets-bench/baselines/: chessboard.json
crates/calib-targets-bench/src/: ablate.rs  baseline.rs  compare.rs  config.rs  dataset.rs  diagnose.rs  diff.rs  lib.rs  overlay.rs  precision.rs  report.rs  run_set.rs  runner.rs
crates/calib-targets-bench/tests/: orientation_free_parity.rs
crates/calib-targets-charuco/: Cargo.toml  README.md
crates/calib-targets-charuco/benches/: dataset_decode.rs
crates/calib-targets-charuco/docs/: PIPELINE.md
crates/calib-targets-charuco/examples/: charuco_detect.rs  charuco_investigate.rs  run_dataset.rs
crates/calib-targets-charuco/src/: alignment.rs  board.rs  detector.rs  diagnostics.rs  investigation.rs  io.rs  lib.rs  link_check.rs  validation.rs
crates/calib-targets-charuco/testdata/: charuco_regression_baselines.json
crates/calib-targets-charuco/tests/: check_consistency.rs  private_dataset.rs  regression.rs  rust_api_smoke.rs
crates/calib-targets-chessboard/: Cargo.toml  README.md
crates/calib-targets-chessboard/benches/: chessboard_timing.rs  dataset_chessboard.rs  dataset_corners.rs
crates/calib-targets-chessboard/docs/: PIPELINE.md
crates/calib-targets-chessboard/examples/: chessboard.rs  debug_single.rs  detect_chessboard.rs  rectify_global.rs  run_dataset.rs
crates/calib-targets-chessboard/src/: boosters.rs  cell_size.rs  circular_stats.rs  cluster.rs  corner.rs  detector.rs  diagnostics.rs  geom.rs  gridgraph.rs  grow.rs  io.rs  legacy_projective_grid.rs  lib.rs  mesh_warp.rs  params.rs  quality.rs  rectified_view.rs  seed.rs  topological.rs  validate.rs
crates/calib-targets-chessboard/tests/: dataset_3536119669.rs  graph_build_dispatch.rs  marker_internal_rejection.rs  multi_component.rs  private_130puzzle.rs  private_3536119669.rs  private_dataset.rs  projective_grid_next_parity.rs  sweep_3536119669_smoke.rs  testdata_regression.rs  topo_grid_regression.rs
crates/calib-targets-cli/: Cargo.toml  README.md
crates/calib-targets-cli/src/: main.rs
crates/calib-targets-cli/tests/: cli.rs
crates/calib-targets-core/: Cargo.toml  README.md
crates/calib-targets-core/src/: bit_likelihood.rs  chess.rs  corner.rs  corner_map.rs  grid_alignment.rs  grid_smoothness.rs  homography.rs  image.rs  io.rs  lib.rs  logger.rs  orientation_clustering.rs  rectify.rs
crates/calib-targets-ffi/: Cargo.toml  cbindgen.toml
crates/calib-targets-ffi/cmake/: calib_targets_ffi-config-version.cmake.in  calib_targets_ffi-config.cmake.in
crates/calib-targets-ffi/examples/: chessboard_consumer_smoke.c  chessboard_wrapper_smoke.cpp  native_smoke_common.h
crates/calib-targets-ffi/include/: calib_targets_ffi.h  calib_targets_ffi.hpp
crates/calib-targets-ffi/src/: convert.rs  detectors.rs  error.rs  lib.rs  package_support.rs  tests.rs  types.rs  validate.rs
crates/calib-targets-ffi/tests/: cmake_consumer_smoke.rs  native_consumer_smoke.rs  release_archive_smoke.rs
crates/calib-targets-marker/: Cargo.toml  README.md
crates/calib-targets-marker/docs/: PIPELINE.md
crates/calib-targets-marker/examples/: marker_detect.rs
crates/calib-targets-marker/src/: circle_score.rs  coords.rs  detect.rs  detector.rs  diagnostics.rs  io.rs  lib.rs  match_circles.rs  types.rs
crates/calib-targets-marker/tests/: check_consistency.rs
crates/calib-targets-print/: Cargo.toml  README.md
crates/calib-targets-print/src/: lib.rs  model.rs  render.rs  render_dxf.rs
crates/calib-targets-print/tests/: golden_dxf.rs
crates/calib-targets-puzzleboard/: Cargo.toml  README.md
crates/calib-targets-puzzleboard/benches/: dataset_decode.rs  synthetic_decode.rs
crates/calib-targets-puzzleboard/docs/: PIPELINE.md  SYNTHETIC_AUTHOR_LIKE.md
crates/calib-targets-puzzleboard/examples/: run_dataset.rs
crates/calib-targets-puzzleboard/src/: board.rs  code_maps.rs  diagnostics.rs  io.rs  lib.rs  params.rs  render_bits.rs
crates/calib-targets-puzzleboard/tests/: check_consistency.rs  dataset_full_mode_bounds.rs  end_to_end.rs  interop_authors.rs  multi_camera_soft_ll.rs  synthetic_author_like.rs
crates/calib-targets-puzzleboard/tools/: generate_code_maps.rs  import_author_maps.rs  synth_puzzleboard_photo.py  verify_code_maps.rs
crates/calib-targets-py/: Cargo.toml  README.md  pyproject.toml
crates/calib-targets-py/examples/: charuco_roundtrip.py  chessboard_roundtrip.py  detect_charuco.py  detect_charuco_best.py  detect_chessboard.py  detect_chessboard_best.py  detect_marker_board.py  detect_puzzleboard.py  export_calibration_pairs.py  generate_charuco_26x26_4x4_1000.py  generate_printable.py  generate_printable_puzzle.py  inspect_puzzleboard_snap.py  markerboard_roundtrip.py  overlay_charuco.py  overlay_chessboard.py  overlay_chessboard_corners.py  overlay_chessboard_dataset.py  overlay_chessboard_debug.py  overlay_chessboard_grid.py  overlay_chessboard_v2.py  overlay_puzzleboard_board_frame.py  overlay_puzzleboard_dataset.py  puzzleboard_detection_overlay.py  puzzleboard_roundtrip.py  topological_chessboard_minimal.py
crates/calib-targets-py/python_tests/: test_chess_config_rust_roundtrip.py  test_cli.py  test_import.py  (+4 more)
crates/calib-targets-studio/: Cargo.toml  README.md
crates/calib-targets-wasm/: Cargo.toml  LICENSE  README.md  typescript-extras.d.ts
crates/chessboard-v2/: Cargo.toml
crates/projective-grid/: Cargo.toml  README.md
crates/projective-grid-next/: Cargo.toml
(+804 files in other folders)
