[workspace]
members = [
    "crates/calib-targets",
    "crates/calib-targets-core",
    "crates/calib-targets-chessboard",
    "crates/calib-targets-charuco",
    "crates/calib-targets-aruco",
    "crates/calib-targets-marker",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VitalyVorobyev/calib-targets-rs"
homepage = "https://vitalyvorobyev.github.io/calib-targets-rs/"
documentation = "https://vitalyvorobyev.github.io/calib-targets-rs/api"
rust-version = "1.70"
