[package]
name = "calib-targets-core"
version = "0.1.0"
edition = "2021"
description = "Core types and utilities for calibration target detection"
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
