[package]
name = "calib-targets-aruco"
version = "0.1.0"
edition = "2021"
description = "Embedded ArUco/AprilTag dictionaries and fast marker decoding on rectified grids"
license = "MIT OR Apache-2.0"

[features]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core = { path = "../calib-targets-core" }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", optional=true }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
