[package]
name = "calib-targets-aruco"
version = "0.2.3"
description = "Embedded ArUco/AprilTag dictionaries and fast marker decoding on rectified grids"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation.workspace = true
keywords = ["calibration", "computer-vision", "aruco", "apriltag", "marker"]
categories = ["computer-vision", "science"]

[features]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core = { path = "../calib-targets-core", version = "0.2" }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", optional=true }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
image = { version = "0.25", default-features = true }
chess-corners = { version = "0.3", features = ["rayon", "ml-refiner"] }
calib-targets-chessboard = { path = "../calib-targets-chessboard", version = "0.2" }
log = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
