[package]
name = "calib-targets-aruco"
version.workspace = true
description = "Embedded ArUco/AprilTag dictionaries and fast marker decoding on rectified grids"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation.workspace = true
keywords = ["calibration", "computer-vision", "aruco", "apriltag", "marker"]
categories = ["computer-vision", "science"]

[features]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core.workspace = true
nalgebra = { workspace = true, features = ["serde-serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
tracing = { workspace = true, optional = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
image.workspace = true
chess-corners = { workspace = true, features = ["rayon", "ml-refiner"] }
calib-targets-chessboard.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
