[package]
name = "calib-targets-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Internal regression / performance harness for the chessboard grid builder"

[dependencies]
# The bench renders overlays from the chessboard `DebugFrame`, so it enables
# the `diagnostics` feature. It reads the grid `cell_size` from the stable
# `ChessboardDetection` (always available); the `DebugFrame` is used only
# for per-corner overlay staging.
calib-targets = { workspace = true, features = ["tracing", "diagnostics"] }
calib-targets-chessboard = { workspace = true, features = ["tracing", "diagnostics"] }
calib-targets-core = { workspace = true }
clap = { workspace = true, features = ["derive"] }
image = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "topo_stage_timing"
path = "src/bin/topo_stage_timing.rs"

[lints]
workspace = true
