[package]
name = "calib-targets-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Internal regression / performance harness for the chessboard grid builder"

[dependencies]
# The bench renders overlays from the chessboard `DebugFrame`, so it enables
# the `diagnostics` feature. It reads the grid `cell_size` from the stable
# `ChessboardDetection` (always available); the `DebugFrame` is used only
# for per-corner overlay staging.
calib-targets = { workspace = true, features = ["tracing", "diagnostics"] }
calib-targets-chessboard = { workspace = true, features = ["tracing", "diagnostics"] }
calib-targets-core = { workspace = true }
# `full_stage_timing` builds the regression-matching ChESS config directly
# (`Threshold::Relative` + `with_chess`), which lives in the upstream crate.
chess-corners = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
image = { workspace = true }
nalgebra = { workspace = true }
# The grid-level bench engine drives the grid builder directly (bypassing the
# chessboard recovery stages) for the orientation-source head-to-head.
projective-grid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"

[[bin]]
name = "bench"
path = "src/bin/bench/main.rs"

[[bin]]
name = "topo_stage_timing"
path = "src/bin/topo_stage_timing.rs"

[[bin]]
name = "full_stage_timing"
path = "src/bin/full_stage_timing.rs"

[lints]
workspace = true
