[package]
name = "calib-targets-charuco"
version.workspace = true
description = "ChArUco board detector built on top of calib-targets-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation.workspace = true
keywords = ["calibration", "computer-vision", "charuco", "aruco", "chessboard"]
categories = ["computer-vision", "science"]

[features]
default = []
dataset = ["dep:env_logger"]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core.workspace = true
calib-targets-chessboard.workspace = true
calib-targets-aruco.workspace = true
chess-corners = { workspace = true, features = ["rayon", "ml-refiner"] }
chess-corners-core = "0.7"
projective-grid.workspace = true
nalgebra.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
log.workspace = true
env_logger = { workspace = true, optional = true }

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
calib-targets = { path = "../calib-targets" }

[[example]]
name = "run_dataset"
required-features = ["dataset"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
