[package]
name = "calib-targets-charuco"
version.workspace = true
description = "ChArUco board detector built on top of calib-targets-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation.workspace = true
keywords = ["calibration", "computer-vision", "charuco", "aruco", "chessboard"]
categories = ["computer-vision", "science"]

[features]
default = []
# Opt-in introspection surface: the `diagnostics` module, the diagnostics type
# re-exports, and `CharucoDetector::detect_with_diagnostics`. OFF by default,
# consistent with `calib-targets-chessboard`. The detector still captures the
# diagnostics internally (the board-level matcher builds them as part of its
# core return); the feature only controls whether they reach the public surface.
diagnostics = []
# The dataset harness / example renders per-component diagnostics overlays, so
# it pulls in both the charuco and chessboard diagnostics surfaces.
dataset = ["dep:env_logger", "diagnostics", "calib-targets-chessboard/diagnostics"]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core.workspace = true
calib-targets-chessboard.workspace = true
calib-targets-aruco.workspace = true
chess-corners = { workspace = true, features = ["rayon", "ml-refiner"] }
nalgebra.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
log.workspace = true
env_logger = { workspace = true, optional = true }

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
calib-targets = { path = "../calib-targets" }
projective-grid.workspace = true

[[example]]
name = "run_dataset"
required-features = ["dataset"]

# The regression suites measure self-consistency wrong-ids, which live on the
# `detect_with_diagnostics` channel — so they require the `diagnostics` feature.
[[test]]
name = "regression"
required-features = ["diagnostics"]

[[test]]
name = "private_dataset"
required-features = ["diagnostics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
