[package]
name = "calib-targets-chessboard"
version.workspace = true
description = "Invariant-first chessboard detector built on top of ChESS corners"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation.workspace = true
keywords = ["calibration", "computer-vision", "chessboard", "detection", "grid"]
categories = ["computer-vision", "science"]

[features]
default = []
dataset = ["dep:serde_json"]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core.workspace = true
projective-grid.workspace = true
nalgebra.workspace = true
log.workspace = true
kiddo.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
calib-targets.workspace = true
chess-corners = { workspace = true, features = ["rayon", "ml-refiner"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }
env_logger = "0.11"
image.workspace = true
serde_json.workspace = true

[[example]]
name = "run_dataset"
required-features = ["dataset"]

[[example]]
name = "debug_single"
required-features = ["dataset"]

[[bench]]
name = "chessboard_timing"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
