[package]
name = "calib-targets-chessboard"
version.workspace = true
description = "Invariant-first chessboard detector built on top of ChESS corners"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation.workspace = true
keywords = ["calibration", "computer-vision", "chessboard", "detection", "grid"]
categories = ["computer-vision", "science"]

[features]
default = []
# Reserved opt-in introspection seam. The rich per-stage `DebugFrame` surface
# was retired with the seed-and-grow builder; the topological builder exposes
# `trace_topological` on the always-on surface instead. The flag is retained
# (gating no extra code today) so dependent crates' feature wiring stays valid.
diagnostics = []
dataset = ["dep:serde_json", "diagnostics"]
tracing = ["calib-targets-core/tracing", "projective-grid/tracing", "dep:tracing"]

[dependencies]
calib-targets-core.workspace = true
projective-grid.workspace = true
nalgebra.workspace = true
log.workspace = true
kiddo.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
calib-targets = { path = "../calib-targets" }
chess-corners = { workspace = true, features = ["rayon", "ml-refiner"] }
criterion.workspace = true
env_logger.workspace = true
image.workspace = true
serde_json.workspace = true

[[bench]]
name = "chessboard_timing"
harness = false

[[bench]]
name = "dataset_corners"
harness = false

[[bench]]
name = "dataset_chessboard"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
