[package]
name = "calib-targets-cli"
version.workspace = true
description = "CLI utilities for calib-targets"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "calib-targets"
path = "src/main.rs"
doc = false

[dependencies]
calib-targets-aruco.workspace = true
calib-targets-charuco.workspace = true
calib-targets-marker.workspace = true
calib-targets-print.workspace = true
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
