[package]
name = "calib-targets-core"
version = "0.1.1"
description = "Core types and utilities for calibration target detection"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://vitalyvorobyev.github.io/calib-targets-rs/api/calib-targets-core"
keywords = ["calibration", "computer-vision", "geometry", "homography", "chessboard"]
categories = ["computer-vision", "science"]

[features]
tracing = ["dep:tracing"]

[dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
tracing = { version = "0.1", optional=true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
