[package]
name = "calib-targets-core"
version.workspace = true
description = "Core types and utilities for calibration target detection"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation.workspace = true
keywords = ["calibration", "computer-vision", "geometry", "homography", "chessboard"]
categories = ["computer-vision", "science"]

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
chess-corners = { workspace = true }
projective-grid = { workspace = true }
nalgebra = { workspace = true, features = ["serde-serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "json"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
