[package]
name = "calib-targets-ffi"
# Version pinned (not inherited) because the C ABI evolves
# independently of the Rust crate workspace. v1.0.0 marks the
# args/buffers struct redesign of the `*_detect_all` entry points
# (breaking change vs the 0.8 surface).
version = "1.0.0"
description = "C ABI scaffold for calib-targets"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generate-ffi-header"
path = "src/bin/generate-ffi-header.rs"
required-features = ["generate-header"]

[features]
generate-header = ["dep:cbindgen"]

[dependencies]
calib-targets = { workspace = true, features = ["image"] }
cbindgen = { workspace = true, optional = true }
chess-corners.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
zip.workspace = true

[dev-dependencies]
image.workspace = true

[lints]
workspace = true
