[package]
name = "calib-targets-ffi"
# Version pinned (not inherited) because the C ABI evolves
# independently of the Rust crate workspace. v1.0.0 marked the
# args/buffers struct redesign of the `*_detect_all` entry points
# (breaking change vs the 0.8 surface). v2.0.0 drops a now-dead field
# from `ct_charuco_detector_params_t` (a struct-layout-breaking ABI
# change) after the legacy ChArUco vote matcher — its sole consumer —
# was retired; see the CHANGELOG Breaking section for details.
version = "2.0.0"
description = "C ABI scaffold for calib-targets"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generate-ffi-header"
path = "src/bin/generate-ffi-header.rs"
required-features = ["generate-header"]

[features]
generate-header = ["dep:cbindgen"]

[dependencies]
# The C ABI cannot express Cargo features, so the FFI crate enables
# `diagnostics` unconditionally: the diagnostic JSON entry points
# (`ct_*_detector_detect_diagnostics_json`) are always present and the
# generated header is stable across build configurations.
calib-targets = { workspace = true, features = ["image", "diagnostics"] }
cbindgen = { workspace = true, optional = true }
chess-corners.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
zip.workspace = true

[dev-dependencies]
image.workspace = true

[lints]
workspace = true
