[package]
name = "calib-targets-marker"
version = "0.1.0"
edition = "2021"
description = "Checkerboard marker target detector (checkerboard + 3 central circles)"
license = "MIT OR Apache-2.0"

[features]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core = { path = "../calib-targets-core", version = "0.1" }
calib-targets-chessboard = { path = "../calib-targets-chessboard", version = "0.1" }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional=true }
log = "0.4"

[dev-dependencies]
chess-corners = "0.2"
image = { version = "0.25", default-features = true }
serde_json = "1"
