[package]
name = "calib-targets-marker"
version = "0.1.0"
description = "Checkerboard marker target detector (checkerboard + 3 central circles)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/calib-targets-marker"
keywords = ["calibration", "computer-vision", "marker", "chessboard", "circles"]
categories = ["computer-vision", "science"]

[features]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core = { path = "../calib-targets-core", version = "0.1" }
calib-targets-chessboard = { path = "../calib-targets-chessboard", version = "0.1" }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional=true }
log = "0.4"

[dev-dependencies]
chess-corners = { version = "0.2", features = ["rayon"] }
image = { version = "0.25", default-features = true }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
