[package]
name = "calib-targets-marker"
version.workspace = true
description = "Checkerboard marker target detector (checkerboard + 3 central circles)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation.workspace = true
keywords = ["calibration", "computer-vision", "marker", "chessboard", "circles"]
categories = ["computer-vision", "science"]

[features]
tracing = ["calib-targets-core/tracing", "dep:tracing"]

[dependencies]
calib-targets-core.workspace = true
calib-targets-chessboard.workspace = true
nalgebra = { workspace = true, features = ["serde-serialize"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true, optional = true }
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chess-corners = { workspace = true, features = ["rayon", "ml-refiner"] }
image.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
