[package]
name = "calib-targets-print"
version = "0.2.6"
description = "Printable calibration target generation for chessboard, ChArUco, and marker boards"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["calibration", "computer-vision", "charuco", "chessboard", "svg"]
categories = ["computer-vision", "science"]

[dependencies]
calib-targets-aruco = { path = "../calib-targets-aruco", version = "0.2.6" }
calib-targets-charuco = { path = "../calib-targets-charuco", version = "0.2.6" }
calib-targets-core = { path = "../calib-targets-core", version = "0.2.6" }
calib-targets-marker = { path = "../calib-targets-marker", version = "0.2.6" }
png = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
