[package]
name = "calib-targets-print"
version.workspace = true
description = "Printable calibration target generation for chessboard, ChArUco, PuzzleBoard, and marker boards"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["calibration", "computer-vision", "charuco", "chessboard", "svg"]
categories = ["computer-vision", "science"]

[dependencies]
calib-targets-aruco.workspace = true
calib-targets-charuco.workspace = true
calib-targets-core.workspace = true
calib-targets-marker.workspace = true
calib-targets-puzzleboard.workspace = true
png.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
